--- a/ui/style.css
+++ b/ui/style.css
@@ -1,10 +1,7 @@
-body{
-    display: block;
-}
-
 .Main {
     position: absolute;
     background-color: black;
+    display: none;
     width: 50%;
     height: auto;
     padding-bottom: 3%;
@@ -56,7 +53,7 @@ body{
 }
 
 .creator {
-    display: block;
+    display: none;
     color: white;
     font-family: 'Black Ops One', cursive;
     font-size: 25px;
@@ -74,7 +71,7 @@ body{
     align-items: center;
 }
 
-.input {
+#input {
     width: 50%;
     height: auto;
     font-size: 25px;
@@ -124,4 +121,43 @@ body{
     -webkit-transition: all 0.4s;
     -moz-transition: all 0.4s;
     transition: all 0.4s;
+}
+
+.btn3 {
+    width: 5%;
+    margin-left: 5%;
+    margin-top: 2%;
+    height: auto;
+    font-size: 25px;
+    padding: 1%;
+    border: 2px solid #ccc;
+    border-radius: 5px;
+    cursor: pointer;
+    background-color: black;
+    color: white;
+}
+
+.btn3:hover{
+    background-color: white;
+    color: black;
+    -webkit-transition: all 0.4s;
+    -moz-transition: all 0.4s;
+    transition: all 0.4s;
+}
+
+.initial {
+    display: none;
+}
+
+.norecibed h2 {
+    text-align: center;
+    font-size: 20px;
+    font-family: 'Averia Libre', cursive;
+    color: white;
+}
+
+.norecibed img {
+    text-align: center;
+    width: 20%;
+    filter: invert(100%);
 }
