--- a/ui/style.css
+++ b/ui/style.css
@@ -14,9 +14,16 @@
     margin-left: auto;
     margin-right: auto;
     display: block;
-    margin-top: 5%;
+    margin-top: 3%;
     cursor: pointer;
     width: 20vh;
+}
+
+.title {
+    text-align: center;
+    font-size: 35px;
+    color: white;
+    font-family: 'Averia Libre', cursive;
 }
 
 .menu {
@@ -59,8 +66,20 @@
     font-size: 25px;
     padding-top: 3%;
 }
+.crnorecibe {
+    display: none;
+}
 
-.creator h2 {
+.crisrecibe {
+    display: none;
+}
+
+.crnorecibe h2 {
+    -webkit-text-stroke: 0.5px black;
+    text-align: center;
+}
+
+.crisrecibe h2 {
     -webkit-text-stroke: 0.5px black;
     text-align: center;
 }
@@ -149,6 +168,10 @@
     display: none;
 }
 
+.norecibed {
+    display: none;
+}
+
 .norecibed h2 {
     text-align: center;
     font-size: 20px;
@@ -159,5 +182,23 @@
 .norecibed img {
     text-align: center;
     width: 20%;
+    filter: invert(100%);
+}
+
+.isrecibed {
+    display: none;
+}
+
+.isrecibed h2 {
+    text-align: center;
+    font-size: 20px;
+    font-family: 'Averia Libre', cursive;
+    color: white;
+}
+
+.isrecibed img {
+    text-align: center;
+    width: 20%;
+    color: blue;
     filter: invert(100%);
 }
