--- a/ui/style.css
+++ b/ui/style.css
@@ -1,20 +1,22 @@
 .Main {
     position: absolute;
-    background-color: black;
+    /* background-color: black; */
+    background-image: url('https://media.discordapp.net/attachments/878134891370401843/1153860272889548811/fondoscrip.png'); 
+    background-size:cover;
     display: none;
     width: 50%;
     height: auto;
-    padding-bottom: 3%;
+    padding-bottom: 5%;
     left: 50%;
-    border-radius: 5vh;
-    transform: translate(-50%, 50%);
+    border-radius: 2vh;
+    transform: translate(-50%, 30%);
 }
 
 .Main img {
     margin-left: auto;
     margin-right: auto;
     display: block;
-    margin-top: 3%;
+    margin-top: 5%;
     cursor: pointer;
     width: 20vh;
 }
@@ -23,7 +25,8 @@
     text-align: center;
     font-size: 35px;
     color: white;
-    font-family: 'Averia Libre', cursive;
+    font-family: 'Changa', sans-serif;
+    padding-bottom: 5%;
 }
 
 .menu {
@@ -32,12 +35,18 @@
     align-items: center;
 }
 
-.menu img {
-    border-radius: 50%;
-    width: 50%;
+.menu div {
+    font-family: 'Changa', sans-serif;
+    background-color: white;
+    color: black;
+    font-size: 30px;
+    margin: 0% 8%;
+    padding: 2%;
+    border-radius: 3%;
+    cursor: pointer;
 }
 
-.menu img:hover {
+.menu div:hover {
 	opacity: 1;
 	-webkit-animation: flash 1.5s;
 	animation: flash 2.5s;
@@ -59,10 +68,14 @@
 	}
 }
 
+canvas {
+    width: 100%;
+  }
+
 .creator {
     display: none;
     color: white;
-    font-family: 'Black Ops One', cursive;
+    font-family: 'Changa', sans-serif;
     font-size: 25px;
     padding-top: 3%;
 }
@@ -75,12 +88,12 @@
 }
 
 .crnorecibe h2 {
-    -webkit-text-stroke: 0.5px black;
+    /* -webkit-text-stroke: 0.5px black; */
     text-align: center;
 }
 
 .crisrecibe h2 {
-    -webkit-text-stroke: 0.5px black;
+    /* -webkit-text-stroke: 0.5px black; */
     text-align: center;
 }
 
@@ -175,7 +188,7 @@
 .norecibed h2 {
     text-align: center;
     font-size: 20px;
-    font-family: 'Averia Libre', cursive;
+    font-family: 'Changa', sans-serif;
     color: white;
 }
 
@@ -192,7 +205,7 @@
 .isrecibed h2 {
     text-align: center;
     font-size: 20px;
-    font-family: 'Averia Libre', cursive;
+    font-family: 'Changa', sans-serif;
     color: white;
 }
 
